<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <org.osmdroid.views.MapView
            android:id="@+id/map"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

        </org.osmdroid.views.MapView>

        <ImageButton
            android:id="@+id/speakButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:contentDescription="@string/speak_button"
            android:minHeight="48dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/map"
            app:layout_constraintEnd_toEndOf="@+id/map"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toStartOf="@+id/map"
            app:layout_constraintTop_toTopOf="@+id/map"
            app:layout_constraintVertical_bias="0.033"
            app:srcCompat="@drawable/ic_baseline_speaker_24" />

        <ImageButton
            android:id="@+id/silentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:contentDescription="@string/silence_button"
            android:minHeight="48dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/map"
            app:layout_constraintEnd_toEndOf="@+id/map"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toStartOf="@+id/map"
            app:layout_constraintTop_toTopOf="@+id/map"
            app:layout_constraintVertical_bias="0.033"
            app:srcCompat="@drawable/ic_baseline_do_not_disturb_on_24" />


        <androidx.cardview.widget.CardView
            android:id="@+id/speedLimitCardView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/map"
            app:layout_constraintEnd_toEndOf="@+id/map"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="@+id/map"
            app:layout_constraintTop_toTopOf="@+id/map"
            app:layout_constraintVertical_bias="0.967">

            <TextView
                android:id="@+id/speedLimitTextView"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:paddingBottom="20dp"
                android:text="@string/speed_limit"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/speedLimitValueTextView"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:paddingTop="20dp"
                android:text="@string/speed_limit_start_value"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/currentSpeedCardView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toTopOf="@+id/speedLimitCardView"
            app:layout_constraintEnd_toEndOf="@+id/map"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="@+id/map"
            app:layout_constraintTop_toTopOf="@+id/map"
            app:layout_constraintVertical_bias="1">

            <TextView
                android:id="@+id/currentSpeedTextView"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:paddingBottom="20dp"
                android:text="@string/current_speed"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/currentSpeedValueTextView"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:paddingTop="20dp"
                android:text="@string/current_speed_start_value"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/saveParkButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/save_park_location"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@+id/map"
            app:layout_constraintEnd_toEndOf="@+id/map"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="@+id/map"
            app:layout_constraintTop_toTopOf="@+id/map"
            app:layout_constraintVertical_bias="0.033" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--this the navigation view which draws
        and shows the navigation drawer-->
    <!--include the menu created in the menu folder-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/myNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>