<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:a="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/nav_last_parked"
        android:title="@string/nav_last_parked" />

    <item
        android:id="@+id/nav_parking_history"
        android:title="@string/nav_parking_history" />

    <!--keep logout at bottom of list-->
    <item
        android:id="@+id/nav_logout"
        android:title="@string/nav_logout" />
</menu>